--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#db0a16</color>
-    <color name="colorPrimaryDark">#B71C1C</color>
-    <color name="colorAccent">#000</color>
+    <color name="colorPrimaryDark">#0C0B0B</color>
+    <color name="colorAccent">#A5A5A5</color>
 
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#16A007</color>
+    <color name="light_green">#69EC5B</color>
+
     <color name="orange">#DA4B1E</color>
-  <!--  <color name="colorPrimaryDark">#FF9800</color>
-    <color name="colorPrimary">#FFAC33</color>-->
+    <color name="dirty_white">#dddddd</color>
+    <color name="dirty_white2">  #F6F6F6</color>
+    <color name="grey">#5A5959</color>
+    <color name="icon_unselect">#b6b7b7</color>
+
 
 
 
