--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="circleImageView" parent="">
@@ -15,8 +16,34 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="dialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowNoTitle">true</item>
+
+    </style>
+    <style
+        name="setting_dialog">
+        <item
+            name="android:windowBackground">@color/transparent</item>
+        <item
+            name="android:windowIsFloating">true</item>
+        <item
+            name="android:windowNoTitle">true</item>
+
+    </style>
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
 
 
-
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
+    </style>
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/tab_text_selector</item>
+    </style>
 
 </resources>
