--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,9 +11,6 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
@@ -30,6 +27,7 @@
 
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Location"
@@ -39,6 +37,7 @@
                     android:fontFamily="@font/montserrat_semi_bold"
                     android:textStyle="bold"/>
                 <TextView
+                    android:id="@+id/detailed_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Detailed Location"
