--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -231,12 +231,13 @@
             android:background="@color/dirty_white"/>
 
         <TextView
+            android:id="@+id/manage_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:drawableRight="@drawable/ic_arrow_right_red"
             android:text="Manage Address"/>
         <View
@@ -247,7 +248,6 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="30dp"
             android:background="@color/dirty_white"/>
-
 
 
 
