--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,10 @@
         <item name="android:textColor">@color/tab_text_selector</item>
     </style>
 
+    <!--Floating label text style-->
+    <style name="MyHintStyle" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/grey</item>
+
+    </style>
+
 </resources>
