--- a/app/src/main/res/layout/cart_food_recycler_item.xml
+++ b/app/src/main/res/layout/cart_food_recycler_item.xml
@@ -14,6 +14,7 @@
         >
 
         <ImageView
+            android:id="@+id/btn_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -27,6 +28,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/food_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -42,9 +44,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="₹ "
+                android:textColor="@color/grey"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="₹ 250"
+                android:text="250"
                 android:textColor="@color/grey"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -59,6 +69,7 @@
             >
 
             <ImageView
+                android:id="@+id/decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
@@ -67,6 +78,7 @@
                 />
 
             <TextView
+                android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12"
@@ -78,6 +90,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/increment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
@@ -91,11 +104,20 @@
                 android:layout_weight="1" />
 
             <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="- ₹ "
+                android:textColor="@color/green"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/discount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="- ₹ 50"
+                android:text="50"
                 android:textColor="@color/green"
                 android:textStyle="bold" />
 
