--- a/app/src/main/res/layout/shop_food_child_item.xml
+++ b/app/src/main/res/layout/shop_food_child_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:elevation="5dp"
     app:cardCornerRadius="10dp"
-    tools:context=".home.product.ProductChildAdapter"
+    tools:context=".home.adapters.ProductChildAdapter"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -85,6 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -105,7 +106,7 @@
                     android:paddingTop="3dp"
                     android:paddingEnd="15dp"
                     android:paddingBottom="3dp"
-                    android:text="10"
+                    android:text="1"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
