--- a/app/src/main/res/layout/shop_food_parent_item.xml
+++ b/app/src/main/res/layout/shop_food_parent_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    tools:context=".home.product.ProductParentAdapter">
+    tools:context=".home.adapters.ProductParentAdapter">
 
     <TextView
         android:id="@+id/category_name"
