--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,6 +23,22 @@
         android:layout_weight="1" />
 
     <EditText
+        android:id="@+id/edt_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Full name"
+        android:textSize="15sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:drawablePadding="10dp"
+        android:drawableLeft="@drawable/ic_profile"
+
+        />
+
+
+    <EditText
+        android:id="@+id/edt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
@@ -36,10 +52,12 @@
 
         />
     <EditText
+        android:id="@+id/edt_mobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Mobile"
         android:textSize="15sp"
+        android:maxLength="10"
         android:inputType="number"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -48,22 +66,10 @@
         android:drawablePadding="15dp"
 
         />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="password"
-        android:textSize="15sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:drawablePadding="10dp"
-        android:drawableLeft="@drawable/ic_password"
-        android:inputType="textPassword"
-        android:drawableRight="@drawable/ic_password_visible"
-        />
 
 
     <Button
+        android:id="@+id/sign_up"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Sign Up"
