--- a/app/src/main/res/layout/address_list_design.xml
+++ b/app/src/main/res/layout/address_list_design.xml
@@ -36,6 +36,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1">
             <TextView
+                android:id="@+id/address_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Home"
@@ -44,6 +45,7 @@
                 android:fontFamily="@font/montserrat_semi_bold"/>
 
             <TextView
+                android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="No 03, 4th Lane,address"
@@ -65,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
                 <TextView
+                    android:id="@+id/edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="EDIT"
@@ -73,6 +76,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
