--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,12 +34,14 @@
             app:shapeAppearanceOverlay="@style/circleImageView" />
 
         <TextView
+            android:id="@+id/edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/ic_edit_red"
             android:drawablePadding="8sp"
             android:text="Edit Profile"
+            android:padding="10dp"
             android:textColor="@color/colorPrimary"
             android:textSize="8sp" />
         <TextView
