--- a/app/src/main/res/layout/activity_add_new_address.xml
+++ b/app/src/main/res/layout/activity_add_new_address.xml
@@ -71,7 +71,12 @@
         app:layout_constraintVertical_bias="0.473" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+<ProgressBar
+    android:id="@+id/progress_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+    android:indeterminate="true"/>
 
 
     <LinearLayout
