--- a/app/src/main/res/layout/activity_address_home_page.xml
+++ b/app/src/main/res/layout/activity_address_home_page.xml
@@ -25,12 +25,13 @@
             android:src="@drawable/ic_arrow_left" />
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:fontFamily="@font/montserrat_regular"
-            android:text="Add New Address"
+            android:text="Manage Address"
             android:textSize="20sp"
             android:textStyle="bold"
 
