--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -62,14 +62,27 @@
                     android:layout_marginTop="10dp"
                     android:text="Delivery Address" />
 
+                <TextView
+                    android:id="@+id/address_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_weight="1"
+                    android:maxLines="2"
+                    android:text="address name"
+                    android:layout_marginTop="10dp"
+
+                    />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
@@ -83,6 +96,7 @@
 
 
                     <TextView
+                        android:id="@+id/change_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
@@ -92,7 +106,7 @@
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
-            /
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,7 +148,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="₹ 250"
+                        android:text="₹ "
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/sub_total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="250"
                         android:textStyle="bold" />
                 </LinearLayout>
 
@@ -161,7 +181,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="- ₹ 50"
+                        android:text="- ₹ "
+                        android:textColor="@color/green"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/discount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="50"
                         android:textColor="@color/green"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -189,7 +216,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="₹ 25"
+                        android:text="₹ "
+                        android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="25"
                         android:textStyle="bold" />
                 </LinearLayout>
 
@@ -225,7 +257,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="₹ 225"
+                        android:text="₹ "
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="225"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
