--- a/app/src/main/res/layout/activity_notification_home_page.xml
+++ b/app/src/main/res/layout/activity_notification_home_page.xml
@@ -38,9 +38,28 @@
             />
     </LinearLayout>
 
-
+<!--
     <include layout="@layout/notification_list_design"/>
     <include layout="@layout/notification_list_design"/>
     <include layout="@layout/notification_list_design"/>
-    <include layout="@layout/notification_list_design"/>
+    <include layout="@layout/notification_list_design"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/notification_recycler"/>
+    <LinearLayout
+        android:id="@+id/no_notification"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Notification"
+            android:textSize="25sp"
+            android:visibility="gone"
+            android:textColor="@color/black"/>
+    </LinearLayout>
 </LinearLayout>
