--- a/app/src/main/res/layout/notification_list_design.xml
+++ b/app/src/main/res/layout/notification_list_design.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:id="@+id/card"
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/circle_red_small"
@@ -16,6 +18,7 @@
         android:layout_marginTop="20dp"
         android:text="Your orders has been picked up"/>
     <TextView
+        android:id="@+id/time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
